--- a/cartesi-rollups/node/blockchain-reader/Cargo.toml
+++ b/cartesi-rollups/node/blockchain-reader/Cargo.toml
@@ -26,6 +26,9 @@ thiserror = { workspace = true }
 tokio = { workspace = true }
 num-traits = { workspace = true }
 
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
 [dev-dependencies]
 alloy = { workspace = true, features = ["node-bindings", "rpc-types"] }
 cartesi-prt-contracts = { workspace = true }
