--- a/prt/tests/rollups/justfile
+++ b/prt/tests/rollups/justfile
@@ -1,6 +1,8 @@
 ECHO_DIR := "../../../test/programs/echo"
 HONEYPOT_DIR := "../../../test/programs/honeypot"
 YIELD_DIR := "../../../test/programs/yield"
+ANVIL_PATH := "../../../cartesi-rollups/contracts/state.json"
+DEPLOYMENTS_DIR := "../../../cartesi-rollups/contracts/deployments"
 
 WEB3_PRIVATE_KEY := "0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
 
@@ -8,11 +10,11 @@ WEB3_PRIVATE_KEY := "0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf
 test MACH_PATH SCRIPT:
   rm -rf _state
   WEB3_PRIVATE_KEY={{WEB3_PRIVATE_KEY}} \
-  ANVIL_PATH=`realpath {{MACH_PATH}}/anvil_state.json` \
+  ANVIL_PATH=`realpath {{ANVIL_PATH}}` \
   TEMPLATE_MACHINE=`realpath {{MACH_PATH}}/machine-image` \
-  APP=`sed '3q;d' {{MACH_PATH}}/addresses` \
-  CONSENSUS=`sed '2q;d' {{MACH_PATH}}/addresses` \
-  INPUT_BOX=`sed '1q;d' {{MACH_PATH}}/addresses` \
+  TEMPLATE_MACHINE_HASH=0x`xxd -p -c32 {{MACH_PATH}}/machine-image/hash` \
+  DAVE_APP_FACTORY=`jq -r .address {{DEPLOYMENTS_DIR}}/DaveAppFactory.json` \
+  INPUT_BOX=`jq -r .address {{DEPLOYMENTS_DIR}}/cartesiRollups.InputBox.json` \
   lua test_cases/{{SCRIPT}}.lua
 
 # run PRT rollups echo test
