--- a/test/programs/justfile
+++ b/test/programs/justfile
@@ -9,10 +9,9 @@ clean-deps:
   rm -f linux.bin
 
 # all programs
-build-programs: build-yield build-echo build-honeypot build-compute
-clean-programs: clean-yield clean-echo clean-honeypot
+build-programs: build-yield build-echo build-compute
+clean-programs: clean-yield clean-echo
 clean-program prog:
-  rm -f {{prog}}/_anvil.log {{prog}}/addresses {{prog}}/anvil_state.json
   rm -rf {{prog}}/machine-image
 
 # yield
@@ -21,7 +20,6 @@ build-yield: clean-yield
     --flash-drive=label:root,filename:./rootfs.ext2 \
     --no-rollback --store=./yield/machine-image \
     -- "while true; do yield manual rx-accepted; yield manual rx-rejected; done"
-  ./build_anvil_state.sh "yield"
 clean-yield: (clean-program "yield")
 
 # echo
@@ -30,14 +28,7 @@ build-echo: clean-echo
     --flash-drive=label:root,filename:./rootfs.ext2 \
     --no-rollback --store=./echo/machine-image \
     -- "ioctl-echo-loop --vouchers=1 --notices=1 --reports=1 --verbose=1 --reject=2"
-  ./build_anvil_state.sh "echo"
 clean-echo: (clean-program "echo")
-
-# honeypot
-build-honeypot: clean-honeypot
-  ./build_anvil_state.sh "honeypot"
-clean-honeypot:
-  rm -f clean-honeypot/_anvil.log clean-honeypot/addresses clean-honeypot/anvil_state.json
 
 # honeypot/honeypot (requires docker)
 build-honeypot-snapshot: clean-honeypot-snapshot
@@ -45,7 +36,7 @@ build-honeypot-snapshot: clean-honeypot-snapshot
   curl -L \
     https://github.com/cartesi/honeypot/releases/download/v2.0.0/honeypot-snapshot-localhost.tar.gz | \
     tar -xz -C honeypot/machine-image
-clean-honeypot-snapshot: clean-honeypot
+clean-honeypot-snapshot:
   rm -rf honeypot/machine-image
 
 # compute
