fix(node): fix empty epochs causing panic

--- a/prt/tests/rollups/justfile
+++ b/prt/tests/rollups/justfile
@@ -23,6 +23,7 @@ test-echo:
 
 # run PRT rollups honeypot test
 test-honeypot-all:
+  just test {{HONEYPOT_DIR}} simple_no_input
   just test {{HONEYPOT_DIR}} stf_all
   just test {{HONEYPOT_DIR}} big_input
   just test {{HONEYPOT_DIR}} gc_match
@@ -30,6 +31,7 @@ test-honeypot-all:
 
 # run PRT rollups yield test
 test-yield-all:
+  just test {{YIELD_DIR}} simple_no_input
   just test {{YIELD_DIR}} stf_all
   just test {{YIELD_DIR}} big_input
   just test {{YIELD_DIR}} gc_match
