--- a/prt/contracts/foundry.toml
+++ b/prt/contracts/foundry.toml
@@ -14,6 +14,9 @@ remappings = [
 solc_version = "0.8.30"
 evm_version = "prague"
 
+[lint]
+exclude_lints = ["incorrect-shift"]
+
 [fmt]
 line_length = 80
 tab_width = 4
