--- a/cartesi-rollups/contracts/foundry.toml
+++ b/cartesi-rollups/contracts/foundry.toml
@@ -14,6 +14,9 @@ remappings = [
 solc_version = "0.8.30"
 evm_version = "prague"
 
+[fmt]
+sort_imports = true
+
 [lint]
 exclude_lints = ["incorrect-shift"]
 
