--- a/prt/contracts/foundry.toml
+++ b/prt/contracts/foundry.toml
@@ -20,6 +20,7 @@ exclude_lints = ["incorrect-shift"]
 [fmt]
 line_length = 80
 tab_width = 4
+sort_imports = true
 
 [dependencies]
 forge-std = "1.9.6"
