--- a/prt/tests/rollups/justfile
+++ b/prt/tests/rollups/justfile
@@ -28,6 +28,7 @@ test-honeypot-all:
   just test {{HONEYPOT_DIR}} big_input
   just test {{HONEYPOT_DIR}} gc_match
   just test {{HONEYPOT_DIR}} gc_tournament
+  just test {{HONEYPOT_DIR}} bad_commitment
 
 # run PRT rollups yield test
 test-yield-all:
@@ -36,6 +37,7 @@ test-yield-all:
   just test {{YIELD_DIR}} big_input
   just test {{YIELD_DIR}} gc_match
   just test {{YIELD_DIR}} gc_tournament
+  just test {{YIELD_DIR}} bad_commitment
 
 test-honeypot-ci:
   just test {{HONEYPOT_DIR}} simple
