fix: toggle off Rust setup on node build job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -199,7 +199,7 @@ jobs:
         uses: ./.github/actions/setup-tools
         with:
           setup-qemu: false
-          target: ${{ matrix.target }}
+          setup-rust: false
 
       - name: Contracts
         run: |
