--- a/.github/actions/setup-tools/action.yml
+++ b/.github/actions/setup-tools/action.yml
@@ -2,11 +2,11 @@ name: setup-tools
 description: Install base tools
 inputs:
   target:
-    description: 'Architecture to build for'
+    description: 'Architecture to build for (if Rust is setup)'
     required: false
     default: 'x86_64-unknown-linux-gnu'
   rust_version:
-    description: 'Rust version to install'
+    description: 'Rust version to install (if Rust is setup)'
     required: false
     default: '1.86'
   foundry_version:
@@ -15,6 +15,10 @@ inputs:
     default: 'v1.4.3'
   setup-qemu:
     description: 'Whether to setup QEMU for riscv support'
+    required: false
+    default: 'true'
+  setup-rust:
+    description: 'Whether to setup Rust'
     required: false
     default: 'true'
 outputs:
@@ -30,6 +34,7 @@ runs:
 
     - name: Install Rust
       uses: actions-rust-lang/setup-rust-toolchain@v1
+      if: ${{ inputs.setup-rust == 'true' }}
       with:
         components: rustfmt
         target: ${{ inputs.target }}
