--- a/cartesi-rollups/contracts/foundry.toml
+++ b/cartesi-rollups/contracts/foundry.toml
@@ -2,11 +2,13 @@
 src = "src"
 out = "out"
 libs = ["dependencies", "../../prt/contracts/dependencies"]
+auto_detect_remappings = false
 optimizer = true
 via_ir = true
 
 allow_paths = ["../../prt/contracts", "../../machine/step"]
 remappings = [
+    "@openzeppelin-contracts-5.2.0/=dependencies/cartesi-rollups-contracts-2.1.1/dependencies/@openzeppelin-contracts-5.2.0/",
     "@openzeppelin-contracts-5.5.0/=dependencies/@openzeppelin-contracts-5.5.0/",
     "cartesi-rollups-contracts-2.1.1/=dependencies/cartesi-rollups-contracts-2.1.1/",
     "forge-std-1.9.6/=dependencies/forge-std-1.9.6/",
