feat(prt): add PRT deployment script

--- a/prt/contracts/foundry.toml
+++ b/prt/contracts/foundry.toml
@@ -16,6 +16,7 @@ remappings = [
 
 solc_version = "0.8.30"
 evm_version = "prague"
+fs_permissions = [{ access = "read-write", path = "deployments" }]
 
 [soldeer]
 remappings_location = "config"
