--- a/prt/contracts/justfile
+++ b/prt/contracts/justfile
@@ -1,7 +1,7 @@
 BINDINGS_DIR := "./bindings-rs/src/contract"
 DEPLOYMENTS_DIR := "./deployments"
 SRC_DIR := "."
-BINDINGS_FILTER := "^[^I].+TournamentFactory|LeafTournament|RootTournament|^Tournament$"
+BINDINGS_FILTER := "^[^I].+TournamentFactory|LeafTournament|^Tournament$"
 
 default: build
 
