--- a/prt/tests/rollups/justfile
+++ b/prt/tests/rollups/justfile
@@ -1,18 +1,16 @@
-ECHO_DIR := "../../../test/programs/echo"
-HONEYPOT_DIR := "../../../test/programs/honeypot"
-YIELD_DIR := "../../../test/programs/yield"
-ANVIL_PATH := "../../../cartesi-rollups/contracts/state.json"
+ANVIL_LOAD_PATH := "../../../cartesi-rollups/contracts/state.json"
 DEPLOYMENTS_DIR := "../../../cartesi-rollups/contracts/deployments/31337"
 
 WEB3_PRIVATE_KEY := "0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
 
 # run PRT rollups test
-test MACH_PATH SCRIPT:
+test PROGRAM SCRIPT:
   rm -rf _state
   WEB3_PRIVATE_KEY={{WEB3_PRIVATE_KEY}} \
-  ANVIL_PATH=`realpath {{ANVIL_PATH}}` \
-  TEMPLATE_MACHINE=`realpath {{MACH_PATH}}/machine-image` \
-  TEMPLATE_MACHINE_HASH=0x`xxd -p -c32 {{MACH_PATH}}/machine-image/hash` \
+  ANVIL_LOAD_PATH=`realpath {{ANVIL_LOAD_PATH}}` \
+  ANVIL_DUMP_PATH="anvil_{{PROGRAM}}_{{SCRIPT}}.json" \
+  TEMPLATE_MACHINE=`realpath ../../../test/programs/{{PROGRAM}}/machine-image` \
+  TEMPLATE_MACHINE_HASH=0x`xxd -p -c32 ../../../test/programs/{{PROGRAM}}/machine-image/hash` \
   DAVE_APP_FACTORY=`jq -r .address {{DEPLOYMENTS_DIR}}/DaveAppFactory.json` \
   INPUT_BOX=`jq -r .address {{DEPLOYMENTS_DIR}}/InputBox.json` \
   ERC20_PORTAL=`jq -r .address {{DEPLOYMENTS_DIR}}/ERC20Portal.json` \
@@ -20,39 +18,39 @@ test MACH_PATH SCRIPT:
   lua5.4 test_cases/{{SCRIPT}}.lua
 
 # run PRT rollups echo test
-test-echo:
-  just test {{ECHO_DIR}} simple
+test-echo: \
+        (test "echo" "simple")
 
 # run PRT rollups honeypot test
 test-honeypot-all: \
-        (test-honeypot-case "honeypot_deposit_withdrawal") \
-        (test-honeypot-case "simple_no_input") \
-        (test-honeypot-case "stf_all") \
-        (test-honeypot-case "big_input") \
-        (test-honeypot-case "gc_match") \
-        (test-honeypot-case "gc_tournament") \
-        (test-honeypot-case "bad_commitment")
+        (test "honeypot" "deposit_withdrawal") \
+        (test "honeypot" "simple_no_input") \
+        (test "honeypot" "stf_all") \
+        (test "honeypot" "big_input") \
+        (test "honeypot" "gc_match") \
+        (test "honeypot" "gc_tournament") \
+        (test "honeypot" "bad_commitment")
 
 # run PRT rollups yield test
 test-yield-all: \
-        (test-yield-case "simple_no_input") \
-        (test-yield-case "stf_all") \
-        (test-yield-case "big_input") \
-        (test-yield-case "gc_match") \
-        (test-yield-case "gc_tournament") \
-        (test-yield-case "bad_commitment")
+        (test "yield" "simple_no_input") \
+        (test "yield" "stf_all") \
+        (test "yield" "big_input") \
+        (test "yield" "gc_match") \
+        (test "yield" "gc_tournament") \
+        (test "yield" "bad_commitment")
 
 test-honeypot-ci: \
-        (test-honeypot-case "simple")
+        (test "honeypot" "simple")
 
 test-yield-ci: \
-        (test-yield-case "simple")
+        (test "yield" "simple")
 
-test-honeypot-case CASE:
-  just test {{HONEYPOT_DIR}} {{CASE}}
+test-honeypot-case CASE: \
+        (test "honeypot" CASE)
 
-test-yield-case CASE:
-  just test {{YIELD_DIR}} {{CASE}}
+test-yield-case CASE: \
+        (test "yield" CASE)
 
 # read logs from PRT Rollups node, run in separate terminal after `test-echo`
 read-node-logs:
