feat: bump emulator to 0.20
chore: update emulator submodule, link omp
chore: update step submodule
chore: update bindings, fix tests

--- a/.github/actions/cartesi-machine/action.yml
+++ b/.github/actions/cartesi-machine/action.yml
@@ -4,7 +4,7 @@ inputs:
   version:
     description: 'Version of Cartesi Machine to install'
     required: false
-    default: 0.19.0
+    default: 0.20.0-test
   suffix-version:
     description: 'Suffix of Cartesi Machine to install'
     required: false
