--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,6 +138,8 @@ jobs:
         working-directory: ./machine/emulator
         run: |
           make bundle-boost
+          wget https://github.com/cartesi/machine-emulator/releases/download/v0.19.0/add-generated-files.diff
+          git apply add-generated-files.diff
           make
           sudo make install
 
