--- a/cartesi-rollups/node/epoch-manager/Cargo.toml
+++ b/cartesi-rollups/node/epoch-manager/Cargo.toml
@@ -11,6 +11,7 @@ repository.workspace = true
 
 [dependencies]
 cartesi-dave-contracts = { workspace = true }
+cartesi-prt-contracts = { workspace = true }
 cartesi-prt-core = { workspace = true }
 rollups-state-manager = { workspace = true }
 
