--- a/test/programs/justfile
+++ b/test/programs/justfile
@@ -1,7 +1,7 @@
 download-deps: clean-deps
   wget https://github.com/cartesi/image-kernel/releases/download/v0.20.0/linux-6.5.13-ctsi-1-v0.20.0.bin \
     -O ./linux.bin
-  wget https://github.com/cartesi/machine-emulator-tools/releases/download/v0.17.1/rootfs-tools.ext2 \
+  wget https://github.com/cartesi/machine-emulator-tools/releases/download/v0.17.2/rootfs-tools.ext2 \
     -O ./rootfs.ext2
 
 clean-deps:
@@ -16,7 +16,7 @@ clean-program prog:
 
 # yield
 build-yield: clean-yield
-  cartesi-machine --ram-image=./linux.bin \
+  cartesi-machine --ram-image=./linux.bin --final-hash \
     --flash-drive=label:root,data_filename:./rootfs.ext2 \
     --no-rollback --store=./yield/machine-image \
     -- "while true; do yield manual rx-accepted; yield manual rx-rejected; done"
@@ -24,7 +24,7 @@ clean-yield: (clean-program "yield")
 
 # echo
 build-echo: clean-echo
-  cartesi-machine --ram-image=./linux.bin \
+  cartesi-machine --ram-image=./linux.bin --final-hash \
     --flash-drive=label:root,data_filename:./rootfs.ext2 \
     --no-rollback --store=./echo/machine-image \
     -- "ioctl-echo-loop --vouchers=1 --notices=1 --reports=1 --verbose=1 --reject=2"
@@ -47,7 +47,7 @@ clean-honeypot-project:
 
 # compute
 build-compute: clean-compute
-  cartesi-machine --ram-image=./linux.bin \
+  cartesi-machine --ram-image=./linux.bin --final-hash \
     --flash-drive=label:root,data_filename:./rootfs.ext2 \
     --no-rollback --store=./compute/machine-image \
     --max-mcycle=0 \
